--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,36 @@ services:
       timeout: 120s
     restart: unless-stopped
 
+  master:
+    container_name: "${COMPOSE_PROJECT_NAME:-citus}-master"
+    image: "citusdata/citus:12.1.1"
+    ports: [ "${COORDINATOR_EXTERNAL_PORT:-5432}:5432" ]
+    labels: [ "com.citusdata.role=Master" ]
+    environment: &AUTH
+      POSTGRES_USER: "${POSTGRES_USER:-postgres}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      PGUSER: "${POSTGRES_USER:-postgres}"
+      PGPASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_HOST_AUTH_METHOD: "${POSTGRES_HOST_AUTH_METHOD:-trust}"
+    volumes:
+      - citus-master:/var/lib/postgresql/data
+  worker:
+    image: "citusdata/citus:12.1.1"
+    labels: [ "com.citusdata.role=Worker" ]
+    depends_on: [ manager ]
+    environment: *AUTH
+    command: "/wait-for-manager.sh"
+    volumes:
+      - healthcheck-volume:/healthcheck
+  manager:
+    container_name: "${COMPOSE_PROJECT_NAME:-citus}-manager"
+    image: "citusdata/membership-manager:0.3.0"
+    volumes:
+      - "${DOCKER_SOCK:-/var/run/docker.sock}:/var/run/docker.sock"
+      - healthcheck-volume:/healthcheck
+    depends_on: [ master ]
+    environment: *AUTH
+
   posts-backend:
     image: posts:0.0.1
     build:
@@ -63,7 +93,6 @@ services:
       REDIS_HOST: cache-db
       REDIS_PORT: 6379
 
-
   users-backend:
     image: users:0.0.1
     build:
@@ -79,5 +108,28 @@ services:
       DB_USER: postgres
       DB_PASSWORD: postgres
 
+  dialogs-backend:
+    image: dialogs:0.0.1
+    build:
+      context: ./dialogs
+      dockerfile: Dockerfile
+    ports:
+      - "8083:8083"
+    depends_on:
+      master:
+        condition: service_healthy
+      worker:
+        condition: service_healthy
+      manager:
+        condition: service_healthy
+    environment:
+      CITUS_HOST: "${COMPOSE_PROJECT_NAME:-citus}-master"
+
+
 volumes:
   db-data:
+    name: "db-data"
+  healthcheck-volume:
+    name: "citus_healthcheck"
+  citus-master:
+    name: "citus-master"
