--- a/dialogs/src/main/resources/application.yaml
+++ b/dialogs/src/main/resources/application.yaml
@@ -9,3 +9,12 @@ spring:
 
 server:
   port: 8083
+
+destinations:
+  queues:
+    OTUS_POSTS_COUNTER:
+      exchange: POSTS_COUNTER
+      routing-key: UPDATE
+    OTUS_POSTS_COUNTER_APPROVE:
+      exchange: POSTS_COUNTER
+      routing-key: APPROVE
