--- a/users/src/main/resources/application.yaml
+++ b/users/src/main/resources/application.yaml
@@ -10,3 +10,16 @@ spring:
 
 server:
   port: 8081
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
